fix: margins too wide on smaller devices
fixes #1

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -57,6 +57,15 @@
     }
 }
 
+@media screen and (max-width: 992px) {
+    #main-content-container .cp__sidebar-main-content>.mx-auto {
+        padding: 10px 5px 10px 10px;
+    }
+    #main-content-container {
+        padding: 0.5rem 0 0 0.3rem;
+    }
+}
+
 /* Scrollbar style */
 html ::-webkit-scrollbar {
     width: 8px;
